--- a/TR/CM/2.md
+++ b/TR/CM/2.md
@@ -28,6 +28,96 @@ Espace de nommage à plat (= suite de noms de machines sans structure) : 2 probl
 
 **Solution** : espaces de nommage hiérarchiques (par exemple : local.site.region.pays). Permet de centraliser le nommage en déléguant une partie de la responsabilité des sous-espaces de noms. La responsabilité peut être subdivisée à chaque niveau.
 
+### DNS et nommage hiérarchique
+
+1. Spécification de la syntaxe des noms et des règles de délégation d'autorité
+2. Spécification du système distribué qui fait la traduction (nom $$\rightarrow$$ @IP)
+
+DNS $$\rightarrow$$ un type de base de données distribué (performante en lecture - pas en écriture - et tolérante aux pannes) et annuaire électronique.
+
+#### Syntaxe et délégation de nommage
+
+La structure est un arbre dont la racine est un vide (parfois noté par un point, sinon par rien) : `mirsa.imag.fr ` est équivalent à `mirsa.imag.fr.`
+
+##### Vocabulaire
+
+**Label.** étiquette d'un noeud (ex : mirsal, fr, www)
+
+**Domaine.** Un sous-arbre
+
+**Nom de domaine.** La liste des appels depuis la racine jusqu'au noeud (ex : mirsa $$\rightarrow$$ imag.fr, inria $$\rightarrow$$ fr)
+
+##### Responsabilité et délégation
+
+Les domaines de responsabilité du nommage sont délimités par certains arcs reliant 2 noeuds de l'arbre. Ces domaines de responsabilité sont appelés des **zones**.
+
+#### Le système distribué
+
+##### Généralités
+
+Les informations associée aux nœuds (@IP et autres) sont réparties sur plusieurs serveurs et par zone.
+
+Un serveur DNS possède **une ou plusieurs zones**.
+
+> Serveur = serveur de noms, serveur DNS
+
+Mécanismes :
+
+- Les informations sont accessibles par un mécanisme de **client/serveur**.
+- Un mécanisme de **réplication** assure une bonne tolérance aux pannes/tenue en charge.
+- Un mécanisme de **cache** pour assurer une bonne réactivité.
+
+#### Structure générale de DNS
+
+##### Serveurs primaires
+
+Reponsables d'une ou plusieurs zones. Ils sont mis à jour par l'administrateur (fichier texte). Le **serveur** est dit "d'autorité" pour la zone
+
+##### Serveurs secondaires
+
+Ces serveurs recopient périodiquement les informations (fichier décrivant la/les zones) du serveur primaire.
+
+**Réplications :**
+
+- Tolérance aux pannes
+- Performance / passage à l'échelle
+
+"Structure" **statique** établie manuellement.
+
+##### Système de cache
+
+Une résolution de nom peut faire intervenir plusieurs serveurs, et chacun de ces serveurs va mémoriser le résultat pour une éventuelle prochaine demande de résolution. Cela permet d'augmenter la performance et la réactivité en diminuant la charge globale.
+
+##### Les clients et interrogations
+
+Les clients principaux : toutes les applications qui utilisent les noms de machines comme adresses.
+
+> Sous Linux : via une bibliothèque `libresolv.a/.o`
+
+Un client interroge généralement toujours le même serveur. Un serveur doit généralement solliciter plusieurs serveurs pour répondre à une demande de résolution
+
+**2 modes d'interrogation :**
+
+- **Mode itératif.** [voir schéma Alexis]
+- **Mode récursif.** [voir schéma Alexis]
+
+En pratique, un mélange de récursif et itératif
+
+
+
+
+
+
+
+
+
+
+
+.
+
+
+
+
 
 
 .
