--- a/CC/CM/1.md
+++ b/CC/CM/1.md
@@ -1,6 +1,6 @@
 # Complexité algorithmique - 1
 
-Responsable : <Valentin.R...@imag.fr>?
+Responsable : <Valentin.Gledel@univ-grenoble-alpes.fr>?
 
 Auteure diapo : <Nadia.Brauner@imag.fr>
 
