--- a/CC/CM/2.md
+++ b/CC/CM/2.md
@@ -20,14 +20,14 @@ Varie en fonction de la **taille de l'entrée** (espace mémoire) :
 Transparents : <https://caseine.org/mod/resource/view.php?id=2253>
 
 - **Chaîne.** Séquence alternée de sommets et d'arêtes.
-- **Chaı̂ne simple.** Pas de répétition d’arêtes.
-- **Chaı̂ne élémentaire.** Pas de répétition de sommets.
+- **Chaîne simple.** Pas de répétition d’arêtes.
+- **Chaîne élémentaire.** Pas de répétition de sommets.
 
 ### Connexité
 
-Un graphe est **connexe** ssi pour toute paire de sommets, il existe dans le graphe une chaı̂ne qui les relie.
+Un graphe est **connexe** ssi pour toute paire de sommets, il existe dans le graphe une chaîne qui les relie.
 
-*Notation.* $$x \sim y$$ s’il existe une chaı̂ne de $$x$$ à $$y$$ (relation d'équivalence).
+*Notation.* $$x \sim y$$ s’il existe une chaîne de $$x$$ à $$y$$ (relation d'équivalence).
 
 **Composantes connexes.** Classes d’équivalences pour $$\sim$$.
 
@@ -52,7 +52,7 @@ $$
 
 ### Cycles
 
-- **Cycle.** Chaı̂ne simple dont les deux extrémités sont le même sommet.
-- **Cycle élémentaire.** Chaque sommet apparaı̂t une seule fois (sauf les extrémités)
+- **Cycle.** Chaîne simple dont les deux extrémités sont le même sommet.
+- **Cycle élémentaire.** Chaque sommet apparaît une seule fois (sauf les extrémités)
 
 .
