--- a/CC/CM/5.md
+++ b/CC/CM/5.md
@@ -20,7 +20,7 @@ Vocabulaire :
 Problèmes :
 
 - **P1.** Plus courts chemins entre deux sommets donnés
-- **P2.** Plus courts chemins à partir d’un sommet (résoud P1 et P3)
+- **P2.** Plus courts chemins à partir d’un sommet (résout P1 et P3)
 - **P3.** Plus court chemin entre chaque paire de sommets (Floyd)
 
 **Circuit absorbant.** Circuit de longueur strictement négative $$\rightarrow$$ si c'est un cycle, il n'existe pas de plus court chemin entre chacun ces nœuds de ce cycle.
