--- a/II/CM/2.md
+++ b/II/CM/2.md
@@ -10,12 +10,12 @@ Slide : <http://iihm.imag.fr/blanch/INFO4/IHM/cours/1-evenements.pdf>
 
 Évènement = **structure de données** :
 
--   **Type**
--   **_Timestamp_**
--   **Position** du curseur
--   **État** des boutons de la souris
--   **Identifiant** de la fenêtre
--   etc.
+- **Type**
+- **_Timestamp_**
+- **Position** du curseur
+- **État** des boutons de la souris
+- **Identifiant** de la fenêtre
+- etc.
 
 Types d'évènements (noms dépendent du système) : KeyPress, KeyRelease, etc.
 
@@ -31,24 +31,24 @@ Automate : $$E \\times S \\rightarrow S$$ (**\*E**vent\* et **\*S**tate\*)
 
 **Automates** déterministes finis avec conditions et actions.
 
--   Lexique simplifié de la souris (mots) : _press_ ; _release_ ; _motion_
--   Syntaxe / machine à états (phrases) : press, release = clic ; press, motion, motion, release = drag
+- Lexique simplifié de la souris (mots) : _press_ ; _release_ ; _motion_
+- Syntaxe / machine à états (phrases) : press, release = clic ; press, motion, motion, release = drag
 
 _Exemples._ Bouton
 
--   Bouton normal
--   Bouton normal avec possibilité de sortir avant de relâcher
--   Bouton inverseur ou play/pause
+- Bouton normal
+- Bouton normal avec possibilité de sortir avant de relâcher
+- Bouton inverseur ou play/pause
 
 _Exemples._ Fenêtre
 
--   Zoom
--   Translate (ou drag and drop)
--   Translate avec distance minimale
+- Zoom
+- Translate (ou drag and drop)
+- Translate avec distance minimale
 
 ```java
 class Interaction implements EventHandler<MouseEvent> {
-  enum State{IDLE, ZOOM_OR_DRAG, DRAGGIN};
+  enum State{IDLE, ZOOM_OR_DRAG, DRAGGING};
 
   State state = State.IDLE;
 
@@ -80,7 +80,7 @@ class Interaction implements EventHandler<MouseEvent> {
 }
 ```
 
-## 1. Elements d'architecures
+## 1. Elements d'architectures
 
 **Architecture.** Séparer l'interface utilisateur
 
