--- a/LT/CM/2.md
+++ b/LT/CM/2.md
@@ -12,7 +12,7 @@ conclusion
 
 Format universel :
 
-- Règles de sémantique, comment fnctionne un langage de programmation
+- Règles de sémantique, comment fonctionne un langage de programmation
   - s'exécute
   - typage
 - Règles de raisonnement (logique)
@@ -125,10 +125,3 @@ A ∨ B   B v A     B ∨ A
 ---------------------- ->i[h]
 A v B -> B v A
 ```
-
-
-
-
-
-
-∧∨¬ (https://en.wikipedia.org/wiki/List_of_logic_symbols)
