--- a/PS/CM/2.md
+++ b/PS/CM/2.md
@@ -35,7 +35,7 @@ $$
 On a un dé à 8 faces (uniforme) $$\{1, \dots, 8\}$$
 On a besoin d'un dé à 6 faces (uniforme) $$\{1, \dots, 6\}$$
 
-```
+```text
 while X > 6
   X = De_8
 return X
@@ -45,7 +45,7 @@ return X
 
 J'ai un générateur uniforme sur A. Je veux un générateur uniforme sur B.
 
-```
+```text
 Géné_unif_B :
 repeat until X in B
   X = Géné_unif_A
@@ -85,9 +85,81 @@ On peut par exemple faire des "paliers" de "taille" proportionnelle à la probab
 
 **Optimisation.** Mettre les paliers les plus larges en premier.
 
+### Résumé des méthodes pour passer d'un générateur à un autre
 
+- Fonctions de répartition / paliers
+  - Marche pour les lois à support infini
 
+    ```text
+    X = rand(0, 1)
+    S = 0, k = 0
+    while (X >= 5)
+      S += p(1-p)^k
+      k++
+    return k
+    ```
 
+- Rejet
+  - Relancer tant que le résultat n'est pas dans le sous-ensemble
+    - Temps d'exécution : cardinal sous-ensemble / cardinal total
+  - 
+  
+    ```text
+    repeat:
+      v = sample(1:p) # choix abscisse (valeur dans l'ensemble)
+      x = rand(0, B)  # choix ordonnée (proba de v)
+      if (x <= p[v]) return v # si la proba est correcte on valide
+    ```
+
+    - Temps d'exécution : aire sous la courbe / aire totale
+    - $$\mathbb{P}(N = k) = (1 - p)^{k-1}p$$
+    - $$\mathbb{E}(N) = \sum\limits_{k=1}^{\infty} kp(1 - p)^{k-1} = {1 \over p}$$
+
+## Génération d'une loi à partir de la loi uniforme lorsque l'on connais la fonction de répartition
+
+$$
+X = ? Y = F_X^{-1}(\mathcal{U}(0, 1))
+$$
+$$
+\begin{array}{lcl}
+P(Y \leq t) & = & P(F^{-1}_X(U) \leq t)\\
+& = & P(Y \leq F_X(t))\\
+& = & F_X(t)\\
+\end{array}
+$$
+
+## Test d'un générateur aléatoire
+
+- Indépendance. Construire une séquence de nombres à partir de laquelle on en génère une autre et vérifier les probabilités auxquelles on s'attend
+- Uniformité.
+
+$$
+\begin{array}{lcl}
+F_X(b) = \mathbb{P}(1 \leq X \leq b) & = & \mathbb{P}(1 \leq 1 + 2U \leq b)\\
+& = & \mathbb{P}({1-1 \over 2} \leq U \leq {b-1 \over 2})\\
+& = & \mathbb{P}(0 \leq U \leq {b-1 \over 2})\\
+& = & {b-1 \over 2}\\
+\end{array}
+$$
+
+## Exemple
+
+Soit $$f_E(t) = \lambda e^{-\lambda t}$$
+
+$$
+\begin{array}{lcl}
+F_E(t) & = & \int_{0}^{t} \lambda e^{-\lambda x} dx\\
+& = & \big[-e^{-\lambda x}\big]_{0}^{t}\\
+& = & 1 - e^{-\lambda t}\\
+\end{array}
+$$
+
+$$
+\begin{array}{lcl}
+A - e^{-\lambda t} = u & \Leftrightarrow & 1 - u = e^{-\lambda t}\\
+& \Leftrightarrow & t = {\ln(1-u) \over -\lambda}\\
+\end{array}
+$$
 
 
 .
