--- a/RO/CM/1.md
+++ b/RO/CM/1.md
@@ -1,17 +1,16 @@
-# Cours de recherche opérationelle - I
+# Cours de recherche opérationnelle - I
 
 Responsable cours : Nadia Brauner (<nadia.brauner@imag.fr>)
 
 Responsable TD : Florian Virch ?
 
-Voir Operations Research (UGA) sur Caseine : <https://cas
-eine.org/course/view.php?id=42>
+Voir Operations Research (UGA) sur Caseine : <https://caseine.org/course/view.php?id=42>
 
 Guide éditeur OPL Caséine : <https://caseine.org/mod/resource/view.php?id=4409>
 
 ## Introduction
 
-Slides : https://caseine.org/mod/resource/view.php?id=883
+Slides : <https://caseine.org/mod/resource/view.php?id=883>
 
 - **RO-AD** : Recherche Opérationnelle - Aide à la Décision
 - **TSP** : *Travelling Salesman Problem*
@@ -20,7 +19,7 @@ Slides : https://caseine.org/mod/resource/view.php?id=883
 
 ## Programmation linéaire
 
-Slides : https://caseine.org/pluginfile.php/20662/mod_resource/content/2/SlidesEnLP.pdf
+Slides : <https://caseine.org/pluginfile.php/20662/mod_resource/content/2/SlidesEnLP.pdf>
 
 **Linear Programming.** Finite number of real variables, linear constraints, linear objective : $$3x_1 + 4x_2 + 7$$ OK mais $$3x_1^2 + 4x_2^2$$ et $$3x_1x_2$$ pas OK.
 
