--- a/SE/CM/1.md
+++ b/SE/CM/1.md
@@ -7,6 +7,8 @@
 - Fabienne Boyer (Fabienne.Boyer@imag.fr)
 - Noël de Palma (Noel.dePalma@imag.fr)
 
+Site : <http://lig-membres.imag.fr/boyer/html/systeme-expl.html>
+
 **Exécution concurrente, omniprésente** : partage données, ressources, **flots d'exécution** en local avec outils du système d'exploitation et langages **C et Java**.
 
 **Volume** :
@@ -17,11 +19,11 @@
 - 1 gros TP en Java (programmation concurrente multi-threadée) : sur notre temps libre
 - 1 examen de 2 heures
 
-## 1. Modèles d'exécution Concurrente
+## 1. Modèles d'exécution Concurrente et systèmes mono-programmés
 
-### 1. Systèmes mono-programmés
+Slide : <https://lig-membres.imag.fr/boyer/html/Documents/cours/SE/1-IntroETD.pdf>
 
-#### Définitions
+### 1. Définitions
 
 - **Ordinateurs "mainframes"** : traitement par lots, carte perforée
 - **UE** (Unités d'Échange) : flôt de contrôle logique séquentiel
@@ -32,19 +34,19 @@
 - **Ordonnanceur** (scheduler) : partie du système qui gère allocation processeur
 - **Multitâche préemptif** : capacité d'un système d'exploitation à exécuter ou arrêter une tâche planifiée en cours
 
-#### Systèmes d'exploitation
+### 2. Systèmes d'exploitation
 
 - **1ère génération.** Pour un système multi-programmé un programme perd la main si : entrée/sortie, blocage ou fin. Il ne s'arrête jamais pour d'autres raisons.
 - **2ème génération.** Un programme ne peut pas monopoliser le processeur plus d'un certain temps (**quantum** de temps $$\simeq$$ 200 ms), pagination
 
 *Interruptions entre deux instructions assembleur (pas "au milieu").*
 
-#### Processus VS threads
+### 3. Processus VS threads
 
 - **Processus** : **isolation des fautes** et **isolation mémoire**.
 - **Threads** : pas de protection mais **meilleures performances**
 
-#### Échanges de données entre processus
+### 4. Échanges de données entre processus
 
 - Créations
 - Segments de mémoire partagée
@@ -53,7 +55,7 @@
 
 Files de processus (prêt, bloqué, etc.) dont le contexte est conservé.
 
-#### Ordonnanceur
+### 5. Ordonnanceur
 
 Paramètres et stratégies à choisir : préemption/quantum et priorités
 
@@ -63,6 +65,8 @@ Processus prêts dans une file de type FIFO : `getFirst()` et `putLast()`
 - Round Robin avec priorités dynamiques : priorité augmente avec son âge, nombre de quantum double et priorité baisse à chaque fois qu'un processus a épuisé ses quanta
 
 ## 2. Processus et threads
+
+Slide : <https://lig-membres.imag.fr/boyer/html/Documents/cours/SE/2-ProcessusETD.pdf>
 
 ### 1. Création de processus (fonction fork)
 
@@ -116,7 +120,7 @@ if (ret < 0)
 
 - `execl ("prog", "arg1", "arg2", ..., NULL)` : nombre d'arguments variables
 
-> `execl`, `execlp`, `execle`, `execv`, `execvp`, `execvpe` : https://gist.github.com/fffaraz/8a250f896a2297db06c4
+> `execl`, `execlp`, `execle`, `execv`, `execvp`, `execvpe` : <https://gist.github.com/fffaraz/8a250f896a2297db06c4>
 >
 > - l – arguments passed individually (**list**) to the function.
 > - v – arguments passed as an array (**vector**) of pointers.
@@ -166,7 +170,7 @@ if (pid < 0) {
 }
 ```
 
-### SHELL
+### 4. SHELL
 
 - affiche "> "
 - lit commande + args
@@ -179,6 +183,112 @@ if (pid < 0) {
 
 ## 3. Outils de synchronisation de bas niveau
 
+Slides : <https://lig-membres.imag.fr/boyer/html/Documents/cours/SE/3a-synchroETD.pdf> et <https://lig-membres.imag.fr/boyer/html/Documents/cours/SE/3b-synchroETD.pdf>
+
+### Problème du parking
+
+```text
+Données partagées
+    int nfree;
+    lock l;
+
+Enter()
+    l.lock();
+    while (nfree == 0);
+    nfree--;
+    l.unlock();
+
+Leave()
+    l.lock();
+    nfree++;
+    l.unlock();
+
+Ne fonctionne pas dans le cas suivant :
+  t0.enter()
+  t1.enter() -> boucle sur while(...)
+  to.leave() <- impossible car t1 a pris le verrou
+```
+
+```text
+Une alternative à Enter :
+
+Enter()
+  l.lock()
+  while(nfree == 0) {
+    l.unlock();
+    sleep();
+    l.lock();
+  }
+  nfree--;
+  l.unlock();
+
+Toujours problématique car ne donne aucune garantie
+```
+
+```text
+Enter()
+  while(nfree == 0);
+  l.lock();
+  nfree--;
+  l.unlock();
+
+Problématique car plusieurs threads peuvent sortir du while en même temps.
+```
+
+```text
+Ce qu'on aimerait pouvoir faire :
+
+Enter()
+---- Section critique (SC)
+|  while(<condition>);
+|  wait(); // bloque le thread courant et libère la SC
+|  <action>;
+----
+
+Leave()
+----
+| if <condition>
+|   wakeup();
+----
+```
+
+### Sémaphores (Dijkstra, 1965)
+
+<https://fr.wikipedia.org/wiki/S%C3%A9maphore_(informatique)>
+
+```text
+Semaphore parking = new Semaphore(N); // N = nb places initial
+
+enter ()
+  parking.P(); // travail commencé
+
+leave ()
+  parking.V(); // travail fini
+```
+
+**Scénario.** Parking à 1 place :
+
+Commande   | Compteur | Files bloquées
+-----------|----------|----------------------
+init       | 1        | Aucune
+T0:enter() | 0        | Aucune
+T1:enter() | -1       | T1
+T3:enter() | -2       | T1, T3
+T0:leave() | -1       | T3 (T1 -> ReadyQueue)
+T4:enter() | -2       | T3, T4
+T1:leave() | -1       | T4 (T3 -> ReadyQueue)
+
+> On ne peut pas avoir de vol de cycle avec les sémaphores parce que le compteur désigne toujours le nombre de threads bloqués (on commence par le décrémenter dans `P()` avant toute chose).
+
 ## 4. Outils de synchronisation de haut niveau
 
 ## 5. Gestion des interblocages
+
+## 6. Gestion de la mémoire virtuelle
+
+## 7. Système de gestion de fichiers
+
+## 8. Gestion de la mémoire secondaire
+
+
+.
