--- a/TR/CM/1.md
+++ b/TR/CM/1.md
@@ -177,7 +177,7 @@ Depl | // | Flags |      Fenêtre
 
 #### Ouverture de connexion
 
-Rôle dissymetrique des 2 entités communicantes :
+Rôle dissymétrique des 2 entités communicantes :
 
 - **Client** : celui qui demande l'ouverture de connection
 - **Serveur** : celui qui l'accepte ou non
@@ -249,7 +249,7 @@ $$
 
 **Retard d'acquittement.** On retarde l'envoi d'ACK pour favoriser le regroupement de messages. En pratique, le retard est en dizaines de millisecondes. On envoie toujours 3 messages pour 2 octets utiles.
 
-#### Algorithe de Nayle
+#### Algorithme de Nayle
 
 > Importance de limiter le nombre de petits messages :
 >
@@ -270,13 +270,13 @@ Principe : on ne peut émettre qu'un seul petit paquet non acquitté sur le rés
 
 > Le scénario de consommation des données est à priori arbitraire
 
-**Fenêtre vide.** Lorsque E (émetteur) reçoit ACK = N et WIN = 0, E stoppe l'émission et teste périodiquement la fenêtre de R (récepteur) : première tentative en 5 secondes avec 1 paquet de 1 octer, puis double le temps jusqu'à 1 minute. Tant que R ne peut recevoir (R $$\rightarrow$$ ACK=N et WIN=0)
+**Fenêtre vide.** Lorsque E (émetteur) reçoit ACK = N et WIN = 0, E stoppe l'émission et teste périodiquement la fenêtre de R (récepteur) : première tentative en 5 secondes avec 1 paquet de 1 octet, puis double le temps jusqu'à 1 minute. Tant que R ne peut recevoir (R $$\rightarrow$$ ACK=N et WIN=0)
 
 #### Syndrome de la fenêtre stupide (*ou silly window*)
 
-Si B annonce une petite fenêtre (suite à une faible consommation de données des couches supérieures) l'émette émét (avec une forte probabilité) un nouveau petit message qui fait redescendre WIN = 0. Cela implique une sous-utilisation du réseau et la multiplication des petits messages, **à éviter**.
+Si B annonce une petite fenêtre (suite à une faible consommation de données des couches supérieures) l'émette émet (avec une forte probabilité) un nouveau petit message qui fait redescendre WIN = 0. Cela implique une sous-utilisation du réseau et la multiplication des petits messages, **à éviter**.
 
-**Solution.** Après l'émission de WIN = 0, l'emetteur doit attendre d'avoir assez de place pour envoyer un acquittement pour envoyer un ACK avec WIN=seuil (seuil fonction de MSS et de la mémoire allouée par connection)
+**Solution.** Après l'émission de WIN = 0, l'émetteur doit attendre d'avoir assez de place pour envoyer un acquittement pour envoyer un ACK avec WIN=seuil (seuil fonction de MSS et de la mémoire allouée par connection)
 
 #### Maîtrise de congestion réseau
 
