--- a/RO/TD/1.md
+++ b/RO/TD/1.md
@@ -20,7 +20,7 @@
   - Minimums : $$x_{TV} \ge 3, x_J \ge 1$$
   - Budget : $$800x_{TV} + 600x_J \le 4800$$
 
-Pour dessiner un **graphique** (nommbre de minutes en fonction du nombre de pages) on va chercher à hachurer les zones impossibles pour connaître toutes les configurations possibles. D'abord on hachure **avant 3 minutes** et **avant 1 page**, puis on va tracer une **droite du budget** au-dessus de laquelle on va hachurer. Pour cette droite il nous faut deux points, on utilise la contrainte de budget :
+Pour dessiner un **graphique** (nombre de minutes en fonction du nombre de pages) on va chercher à hachurer les zones impossibles pour connaître toutes les configurations possibles. D'abord on hachure **avant 3 minutes** et **avant 1 page**, puis on va tracer une **droite du budget** au-dessus de laquelle on va hachurer. Pour cette droite il nous faut deux points, on utilise la contrainte de budget :
 
 $$
 800x_{TV} + 600x_J = 4800 \Leftrightarrow 8x_{TV} + 6x_J = 48
